Added minimal layout to display products.

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,1 +1,8 @@
-<p>product-detail works!</p>
+<div>
+    <h2>{{ product.product }}</h2>
+    <p>{{ product.price }}</p>
+    <div>
+        <p>{{ product.quantity }}</p>
+        <p>{{ product.id }}</p>
+    </div>
+</div>
