Connected delete button functionality.

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,1 @@
-<app-product-detail *ngFor='let product of products; index as i' [product]='product'></app-product-detail>
+<app-product-detail *ngFor='let product of products; index as i' [product]='product' (onDelete)='deleteProduct(product.id)'></app-product-detail>
