Basic form layout created.

--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -1,1 +1,13 @@
-<p>product-form works!</p>
+<form>
+    <!-- product -->
+    <label for='product'>Product</label>
+    <input type='text' name='product' placeholder='Ugly Sweater' required='required'>
+    <!-- price -->
+    <label for='price'>Price</label>
+    <input type='number' min='1' step='any' required='required'>
+    <!-- quantity -->
+    <label for='quantity'>Quantity</label>
+    <input type='number' min='1' required='required'>
+    <!-- submit button -->
+    <button></button>
+</form>
