--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<form #addProductForm="ngForm" (ngSubmit)="submitForm(thisForm);">
+<form #addProductForm="ngForm" (ngSubmit)="submitForm(addProductForm);">
     
     <label for='product'>Product</label>
     <input type='text' name='product' placeholder='Ugly Sweater' required='required' ngModel>
