--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -4,10 +4,10 @@
     <input type='text' name='product' placeholder='Ugly Sweater' required='required' ngModel>
     
     <label for='price'>Price</label>
-    <input type='number' min='1' step='any' required='required' ngModel>
+    <input type='number' name='price' min='1' step='any' required='required' ngModel>
     
     <label for='quantity'>Quantity</label>
-    <input type='number' min='1' required='required' ngModel>
+    <input type='number' name='quantity' min='1' required='required' ngModel>
     
     <button>Add Product</button>
 </form>
