--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,2 +1,4 @@
-<app-product-form (onSubmit)='addProduct($event)'></app-product-form>
+<h1>Shopping Cart</h1>
+<button (click)='showForm()'>Add</button>
+<app-product-form (onSubmit)='addProduct($event)' *ngIf='show'></app-product-form>
 <app-product-detail *ngFor='let product of products; index as i' [product]='product' (onDelete)='deleteProduct(product.id)'></app-product-detail>
