Skeleton for base layout completed.

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,9 +1,17 @@
-<div>
-    <h2>{{ product.product }}</h2>
-    <p>{{ product.price }}</p>
-    <div>
-        <p>{{ product.quantity }}</p>
-        <p>{{ product.id }}</p>
-    </div>
-</div>
-<button (click)='delete()'>Delete</button>
+<ul>
+    <li class='col-1'>
+        {{ product.product }}
+    </li>
+    <li class='col-2'>
+        {{ product.price }}
+    </li>
+    <li class='col-3'>
+        {{ product.quantity }}
+    </li>
+    <li class='col-4'>
+        {{ product.id }}
+    </li>
+    <li class='col-5'>
+        <button (click)='delete()'>Delete</button>
+    </li>
+</ul>
