--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -4,6 +4,39 @@
     text-align: center;   
 }
 
+.btn-container {
+    margin: 1rem;
+}
+
 button {
+    padding: .5rem;
     width: 90vw;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    max-width: 90vw;
+    margin: 0 auto;
+    padding: .5rem;
+    border: 1px solid black;
+    background-color: grey;
+    color: white;
+}
+
+.col-1 {
+    flex-basis: 40%;
+}
+
+.col-3, .col-4 {
+    flex-basis: 10%;
+    text-align: center;
+}
+
+.col-2, .col-5 {
+    flex-basis: 20%;
+}
+
+.col-5 {
+    text-align: right;
 }
