--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -1,13 +1,16 @@
-<form #addProductForm="ngForm" (ngSubmit)="submitForm(addProductForm);">
-    
-    <label for='product'>Product</label>
-    <input type='text' name='product' placeholder='Ugly Sweater' required='required' ngModel>
-    
-    <label for='price'>Price</label>
-    <input type='number' name='price' min='1' step='any' required='required' ngModel>
-    
-    <label for='quantity'>Quantity</label>
-    <input type='number' name='quantity' min='1' required='required' ngModel>
-    
-    <button>Add Product</button>
-</form>
+<div class="modal-container">
+        <form #addProductForm="ngForm" (ngSubmit)="submitForm(addProductForm);">
+            
+            <label for='product'>Product</label>
+            <input type='text' name='product' placeholder='Ugly Sweater' required='required' ngModel>
+            
+            <label for='price'>Price</label>
+            <input type='number' name='price' min='1' step='any' required='required' ngModel>
+            
+            <label for='quantity'>Quantity</label>
+            <input type='number' name='quantity' min='1' required='required' ngModel>
+            
+            <button class='btn-add'>Add Product</button>
+        </form>
+
+</div>
