Minor style changes.

--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,7 +1,11 @@
-/* host targets this components parent element and applies styles to it */
 .heading {
     margin: 0 auto;
-    text-align: center;   
+    text-align: center;
+    padding-top: 1rem;   
+}
+
+h1 {
+    margin-top: 0;
 }
 
 .btn-container {
