--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -4,7 +4,8 @@ ul {
     max-width: 90vw;
     margin: .5rem auto;
     padding: .5rem;
-    border: 1px solid grey;
+    border: 1px solid darkslategray;
+    box-shadow: 0 1px 5px darkgrey;
 }
 
 .col-1 {
