--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -3,7 +3,7 @@
         {{ product.product }}
     </li>
     <li class='col-2'>
-        {{ product.price }}
+        $ {{ product.price }}
     </li>
     <li class='col-3'>
         {{ product.quantity }}
