--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ html, body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
