--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -22,5 +22,23 @@ ul {
 }
 
 .col-5 {
-    text-align: right;
+    text-align: center;
 }
+
+button {
+    background: none;
+    border: none;
+    text-decoration: none;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.fa-trash {
+    font-size: 1rem;
+}
+
+@media only screen and (min-width: 1024px) {
+    ul {
+        max-width: 75vw;
+    }
+  }
