Replaced button with icon.

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -12,6 +12,6 @@
         {{ product.id }}
     </li>
     <li class='col-5'>
-        <button (click)='delete()'>Delete</button>
+        <button (click)='delete()'><i class="fas fa-trash"></i></button>
     </li>
 </ul>
