--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -45,5 +45,20 @@ ul {
 }
 
 .col-5 {
-    text-align: right;
+    text-align: center;
 }
+
+@media only screen and (min-width: 1024px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    button {
+        width: 75vw;
+    }
+
+    ul {
+        width: 75vw;
+        margin-top: 2rem;
+    }
+  }
